Add some integration tests using nebula-test
https://github.com/nebula-plugins/nebula-test